--- a/templates/index.html
+++ b/templates/index.html
@@ -17,45 +17,43 @@
                 </div>
 
 
-                        <div class="page email-page">
-                            <!--<form id="iniciarsesion-form" action="/iniciar_sesion" method="POST">-->
-                                <div class="input-box">
-                                    <input type="text" class="correo-ingresar" name="correo-ingresar" autofocus>
-                                    <label>Ingresa tu correo electrónico</label>
-                                </div>
-                                <div class="forgot">
-                                    <a href="#">¿Olvidaste tu correo?</a>
-                                </div>
-                                <div class="guest-mode">
-                                    <p>¿No es tu computadora? Utilice el modo de invitado para iniciar sesión de forma privada.</p>
-                                    <a href="https://support.google.com/chrome/answer/6130773?hl=es">Más información</a>
-                                </div>
-                                <div class="btn-box">
-                                    <a href="#" class="btn-crear-cuenta">Crear una cuenta</a>
-                                    <button class="btn-next">Siguiente</button>
-                                </div>
+                    <div class="page email-page">
+                        <form id="iniciarsesion-form" action="{{url_for('iniciar')}}" method="POST">
+                            <div class="input-box">
+                                <input type="text" class="correo-ingresar" name="correo-ingresar" autofocus>
+                                <label>Ingresa tu correo electrónico</label>
                             </div>
-                            <div class="page password-page">
-                                <div class="input-box">
-                                    <input type="password" class="contraseña-ingresar">
-                                    <label>Ingresa tu contraseña</label>
-                                </div>
-                                <div class="forgot show">
-                                    <a class="btn-olvide-contraseña">¿Olvidaste tu contraseña?</a>
-                                    <label><input type="checkbox" class="checkbox-contraseña"> Mostrar contraseña</label>
-                                </div>
-                                <div class="btn-box">
-                                    <button class="btn-back">Atrás</button>
-                                    <button type="submit" class="btn-iniciar-sesion">Iniciar sesión</button>
-                                </div>
-                            <!--</form>-->
+                            <div class="forgot">
+                                <a href="#">¿Olvidaste tu correo?</a>
+                            </div>
+                            <div class="guest-mode">
+                                <p>¿No es tu computadora? Utilice el modo de invitado para iniciar sesión de forma privada.</p>
+                                <a href="https://support.google.com/chrome/answer/6130773?hl=es">Más información</a>
+                            </div>
+                            <div class="btn-box">
+                                <a href="#" class="btn-crear-cuenta">Crear una cuenta</a>
+                                <button class="btn-next">Siguiente</button>
+                            </div>
                         </div>
+                        <div class="page password-page">
+                            <div class="input-box">
+                                <input type="password" class="contraseña-ingresar" name="contraseña-ingresar">
+                                <label>Ingresa tu contraseña</label>
+                            </div>
+                            <div class="forgot show">
+                                <a class="btn-olvide-contraseña">¿Olvidaste tu contraseña?</a>
+                                <label><input type="checkbox" class="checkbox-contraseña"> Mostrar contraseña</label>
+                            </div>
+                            <div class="btn-box">
+                                <button class="btn-back">Atrás</button>
+                                <button type="submit" class="btn-iniciar-sesion">Iniciar sesión</button>
+                            </div>
+                        </form>
+                    </div>
 
 
-               
-
-                        <div class="page recover-password-page">
-                        <!--<form id="recuperar-form" action"/recuperar" method"POST">-->
+                    <div class="page recover-password-page">
+                        <form id="recuperar-form" action="{{url_for('recuperar')}}" method="POST">
                             <div class="input-box">
                                 <input type="type" class="correo-recuperar-contraseña">
                                 <label>Ingresa tu correo electrónico</label>
@@ -64,13 +62,12 @@
                                 <button class="btn-back-recuperar-contraseña">Atrás</button>
                                 <button type="submit" class="btn-recuperar-contraseña">Recuperar</button>
                             </div>
-                        <!--</form>-->
-                        </div>
-
+                        </form>
+                    </div>
 
                 
                     <div class="page registration-page">
-                        <form id="registration-form" action="/registrar" method="POST">
+                        <form id="registrar-form" action="{{url_for('registrar')}}" method="POST">
                             <div class="input-box">
                                 <input type="text" id="nombre" class="nombre-registrar" autofocus>
                                 <label>Ingresa tu nombre</label>
@@ -90,16 +87,16 @@
                             <div class="btn-box">
                                 <button class="btn-back-registrar">Atrás</button>
                                 <button type="submit" id="btn-registrar" class="btn-registrar">Registrarse</button>
-                            </div><div id="error-message"></div>
+                            </div>
                         </form>
                     </div>
 
-                
+
             </div>
         </div>
     </div>
 
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
-    <script src="{{url_for('static', filename='js/crearCuenta.js')}}"></script>
+
 </body>
 </html>
