todo funcionando menor boton salir, modulos de home y validaciones

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
                     <div class="login-title">
                         <div class="btn-box">
                             <a class="btn-next">¿Deseas actualizar tu contraseña?</a>
-                            <button href="/" class="btn-salir">Salir</button>
+                            <button href="{{url_for('index')}}" class="btn-salir">Salir</button>
                         </div>
                     </div>
                 </div>
