--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                             <label>Ingresa tu correo electrónico</label>
                         </div>
                         <div class="forgot">
-                            <a href="#">¿Olvidaste tu correo?</a>
+                            <a href="">¿Olvidaste tu correo?</a>
                         </div>
                         <div class="guest-mode">
                             <p>¿No es tu computadora? Utilice el modo de invitado para iniciar sesión de forma privada.</p>
