--- a/templates/home.html
+++ b/templates/home.html
@@ -32,11 +32,11 @@
                 <div class="page update-page">
                     <form id="actualizar-form" action="{{url_for('actualizar')}}" method="POST">
                         <div class="input-box">
-                            <input type="email" name="correo">
+                            <input type="email" name="correo" required>
                             <label>Ingresa tu correo</label>
                         </div>
                         <div class="input-box">
-                            <input type="password" name="contraseña">
+                            <input type="password" name="contraseña" required>
                             <label>Ingresa tu nueva contraseña</label>
                         </div>
                         <div class="forgot show">
